# feishu-weekend-buddy-agent

./: .codefetchignore  .gitignore  AGENTS.md  LICENSE  README.md  TEST_MESSAGES.md  TODO.md  hello.py  main.py  pyproject.toml  spec.md
codefetch/: codebase.md
notebooks/: tmp.ipynb
src/: agent.py  agent_runtime.py  event_message.py  feishu.py  model.py  prompt.py  utils.py
src/example/: im_message.py
src/messages/: handler.py  utils.py
src/middlewares/: __init__.py  history_storage.py  load_history_middleware.py  runtime_context.py  save_history_middleware.py
src/tools/: knowledge.py  knowledge_paths.py  knowledge_records.py  knowledge_tools.py  knowledge_types.py
src/types/: message.py
test/: test_event_subscription.py  test_send_message.py
