[project]
name = "feishu-weekend-buddy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
    "python-dotenv>=1.2.2",
    "python-socks>=2.8.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
